<resources>
    <string name="app_name">Simple Calorie Tracker</string>
    <string name="add_cta">Add Food Entry</string>
    <string name="food_name">Food Name</string>
    <string name="food_calories">Food Calories</string>
    <string name="submit">Submit</string>
    <string name="report">Report</string>
    <string name="filter">Filter</string>
    <string name="more_options">More Options</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cal">Cal</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="retry_login">Retry Login</string>
    <string name="clear">Clear</string>
    <string name="today_s_consumption">Today\'s consumption:</string>
    <string name="food_entries_this_week">Food Entries this week</string>
    <string name="food_entries_last_week">Food Entries last week</string>
    <string name="average_calorie_consumption_per_day_this_week">Average Calorie consumption per day this week</string>
</resources>